<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/routeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="Route Name"
                android:inputType="text"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="Start Location"
                android:inputType="text"
                android:text=""
                app:layout_constraintStart_toStartOf="@+id/routeName"
                app:layout_constraintTop_toBottomOf="@+id/routeName" />


            <EditText
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Enter notes here"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/start"
                app:layout_constraintTop_toBottomOf="@+id/start" />


            <CheckBox
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Favorite"
                app:layout_constraintStart_toStartOf="@+id/notes"
                app:layout_constraintTop_toBottomOf="@+id/notes" />

            <Spinner
                android:id="@+id/feedback_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:autofillHints=" loop vs out-and-back"
                android:entries="@array/feedback1_list"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite">

            </Spinner>

            <Spinner
                android:id="@+id/feedback_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:entries="@array/feedback2_list"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite">

            </Spinner>

            <Spinner
                android:id="@+id/feedback_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="136dp"
                android:entries="@array/feedback3_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite">

            </Spinner>

            <Spinner
                android:id="@+id/feedback_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="188dp"

                android:entries="@array/feedback4_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite">

            </Spinner>

            <Spinner
                android:id="@+id/feedback_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="232dp"
                android:entries="@array/feedback5_list"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite">

            </Spinner>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="SAVE"
            android:shadowColor="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true">

        </Button>
    </LinearLayout>

</ScrollView>