...
                android:text="My Routes"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/toSaveScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:tint="#388E3C"
                app:srcCompat="@android:drawable/ic_menu_add" />
        </LinearLayout>
...
