<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="team_alarmdialog_name_input"></item>
    <item type="id" name="team_alarmdialog_email_input"></item>
</resources>